packages/vib3_flutter/src/vib3_ffi.h

// ============================================================================
// Utility Functions
// ============================================================================

VIB3_EXPORT const char* vib3_version(void);
VIB3_EXPORT const char* vib3_geometry_name(int32_t index);
VIB3_EXPORT bool vib3_has_simd(void);