packages/vib3_flutter/lib/src/ffi/vib3_ffi.dart


// Utility
final _version = _nativeLib.lookupFunction<_VersionNative, _Version>('vib3_version');
final _geometryName = _nativeLib.lookupFunction<_GeometryNameNative, _GeometryName>('vib3_geometry_name');
final _hasSimd = _nativeLib.lookupFunction<_HasSimdNative, _HasSimd>('vib3_has_simd');

// ============================================================================
// Dart Wrapper Classes
// ============================================================================

/// Rotation plane enumeration
enum RotationPlane {
  xy(0),
  xz(1),
  yz(2),
  xw(3),
  yw(4),
  zw(5);

  final int value;
  const RotationPlane(this.value);
}

/// 4D Vector class
class Vec4 {
  Pointer<NativeVec4> _ptr;
  bool _disposed = false;

  Vec4(double x, double y, double z, double w) : _ptr = _vec4Create(x, y, z, w);

  Vec4._fromPointer(this._ptr);

  double get x => _ptr.ref.x;
  double get y => _ptr.ref.y;
  double get z => _ptr.ref.z;
  double get w => _ptr.ref.w;

  set x(double value) => _ptr.ref.x = value;
  set y(double value) => _ptr.ref.y = value;
  set z(double value) => _ptr.ref.z = value;
  set w(double value) => _ptr.ref.w = value;

  double dot(Vec4 other) {
    _checkDisposed();
    return _vec4Dot(_ptr, other._ptr);
  }

  double get length {
    _checkDisposed();
    return _vec4Length(_ptr);
  }

  void normalize() {
    _checkDisposed();
    _vec4Normalize(_ptr);
  }

  Vec4 normalized() {
    _checkDisposed();
    final result = Vec4(x, y, z, w);
    result.normalize();
    return result;
  }

  Vec4 operator +(Vec4 other) {
    _checkDisposed();
    return Vec4._fromPointer(_vec4Add(_ptr, other._ptr));
  }

  Vec4 operator -(Vec4 other) {
    _checkDisposed();
    return Vec4._fromPointer(_vec4Sub(_ptr, other._ptr));
  }

  Vec4 operator *(double scalar) {
    _checkDisposed();
    return Vec4._fromPointer(_vec4Scale(_ptr, scalar));
  }

  Vec4 lerp(Vec4 other, double t) {
    _checkDisposed();
    return Vec4._fromPointer(_vec4Lerp(_ptr, other._ptr, t));
  }

  Float32List toFloat32List() => Float32List.fromList([x, y, z, w]);

  void _checkDisposed() {
    if (_disposed) throw StateError('Vec4 has been disposed');
  }

  void dispose() {
    if (!_disposed) {
      _vec4Free(_ptr);
      _disposed = true;
    }
  }

  @override
  String toString() => 'Vec4($x, $y, $z, $w)';
}

/// 4D Rotor class (8 components for proper 4D rotation)
class Rotor4D {
  Pointer<NativeRotor4D> _ptr;
  bool _disposed = false;

  Rotor4D._fromPointer(this._ptr);

  /// Create identity rotor (no rotation)
  factory Rotor4D.identity() {
    return Rotor4D._fromPointer(_rotor4DIdentity());
  }

  /// Create rotor for single-plane rotation
  factory Rotor4D.fromPlaneAngle(RotationPlane plane, double angle) {
    return Rotor4D._fromPointer(_rotor4DFromPlaneAngle(plane.value, angle));
  }

  /// Create rotor from 6 Euler angles
  factory Rotor4D.fromEuler6({
    double xy = 0,
    double xz = 0,
    double yz = 0,
    double xw = 0,
    double yw = 0,
    double zw = 0,
  }) {
    return Rotor4D._fromPointer(_rotor4DFromEuler6(xy, xz, yz, xw, yw, zw));
  }

  double get s => _ptr.ref.s;
  double get xy => _ptr.ref.xy;
  double get xz => _ptr.ref.xz;
  double get yz => _ptr.ref.yz;
  double get xw => _ptr.ref.xw;
  double get yw => _ptr.ref.yw;
  double get zw => _ptr.ref.zw;
  double get xyzw => _ptr.ref.xyzw;

  /// Multiply rotors (compose rotations)
  Rotor4D multiply(Rotor4D other) {
    _checkDisposed();
    return Rotor4D._fromPointer(_rotor4DMultiply(_ptr, other._ptr));
  }

  /// Rotate a vector
  Vec4 rotate(Vec4 v) {
    _checkDisposed();
    return Vec4._fromPointer(_rotor4DRotate(_ptr, v._ptr));
  }

  /// Spherical linear interpolation
  Rotor4D slerp(Rotor4D other, double t) {
    _checkDisposed();
    return Rotor4D._fromPointer(_rotor4DSlerp(_ptr, other._ptr, t));
  }

  /// Normalize this rotor
  void normalize() {
    _checkDisposed();
    _rotor4DNormalize(_ptr);
  }

  /// Convert to 4x4 rotation matrix
  Mat4x4 toMatrix() {
    _checkDisposed();
    return Mat4x4._fromPointer(_rotor4DToMatrix(_ptr));
  }

  void _checkDisposed() {
    if (_disposed) throw StateError('Rotor4D has been disposed');
  }

  void dispose() {
    if (!_disposed) {
      _rotor4DFree(_ptr);
      _disposed = true;
    }
  }

  @override
  String toString() => 'Rotor4D(s: $s, xy: $xy, xz: $xz, yz: $yz, xw: $xw, yw: $yw, zw: $zw, xyzw: $xyzw)';
}

/// 4x4 Matrix class (column-major)
class Mat4x4 {
  Pointer<NativeMat4x4> _ptr;
  bool _disposed = false;

  Mat4x4._fromPointer(this._ptr);

  /// Create identity matrix
  factory Mat4x4.identity() {
    return Mat4x4._fromPointer(_mat4x4Identity());
  }

  /// Create rotation matrix for a single plane
  factory Mat4x4.rotationXY(double angle) => Mat4x4._fromPointer(_mat4x4RotationXY(angle));
  factory Mat4x4.rotationXZ(double angle) => Mat4x4._fromPointer(_mat4x4RotationXZ(angle));
  factory Mat4x4.rotationYZ(double angle) => Mat4x4._fromPointer(_mat4x4RotationYZ(angle));
  factory Mat4x4.rotationXW(double angle) => Mat4x4._fromPointer(_mat4x4RotationXW(angle));
  factory Mat4x4.rotationYW(double angle) => Mat4x4._fromPointer(_mat4x4RotationYW(angle));
  factory Mat4x4.rotationZW(double angle) => Mat4x4._fromPointer(_mat4x4RotationZW(angle));

  /// Create rotation matrix from 6 angles
  factory Mat4x4.rotationFromAngles({
    double xy = 0,
    double xz = 0,
    double yz = 0,
    double xw = 0,
    double yw = 0,
    double zw = 0,
  }) {
    return Mat4x4._fromPointer(_mat4x4RotationFromAngles(xy, xz, yz, xw, yw, zw));
  }

  /// Multiply matrices
  Mat4x4 multiply(Mat4x4 other) {
    _checkDisposed();
    return Mat4x4._fromPointer(_mat4x4Multiply(_ptr, other._ptr));
  }

  /// Transform a vector
  Vec4 multiplyVec4(Vec4 v) {
    _checkDisposed();
    return Vec4._fromPointer(_mat4x4MultiplyVec4(_ptr, v._ptr));
  }

  /// Get matrix data as Float32List (column-major)
  Float32List toFloat32List() {
    _checkDisposed();
    final list = Float32List(16);
    for (int i = 0; i < 16; i++) {
      list[i] = _ptr.ref.data[i];
    }
    return list;
  }

  void _checkDisposed() {
    if (_disposed) throw StateError('Mat4x4 has been disposed');
  }

  void dispose() {
    if (!_disposed) {
      _mat4x4Free(_ptr);
      _disposed = true;
    }
  }
}

/// Projection utilities
class Projection {
  /// Perspective projection (4D -> 3D)
  static Vec4 perspective(Vec4 v, double distance) {
    return Vec4._fromPointer(_projectPerspective(v._ptr, distance));
  }

  /// Stereographic projection (4D -> 3D)
  static Vec4 stereographic(Vec4 v) {
    return Vec4._fromPointer(_projectStereographic(v._ptr));
  }

  /// Orthographic projection (4D -> 3D)
  static Vec4 orthographic(Vec4 v) {
    return Vec4._fromPointer(_projectOrthographic(v._ptr));
  }
}

/// VIB3 utility functions
class Vib3Utils {
  /// Get the native library version
  static String get version => _version().cast<pkg_ffi.Utf8>().toDartString();

  /// Get geometry name by index (0-23)
  static String geometryName(int index) => _geometryName(index).cast<pkg_ffi.Utf8>().toDartString();

  /// Whether SIMD is available on this platform
  static bool get hasSimd => _hasSimd();
}

// ============================================================================
// Command Batching
// ============================================================================

/// Command types for batch processing
enum CommandType {
  setParameter(0x01),
  setGeometry(0x02),
  rotate(0x03),
  resetRotation(0x04),
  render(0x05),
  generateGeometry(0x06),
  applyWarp(0x07);

  final int value;
  const CommandType(this.value);
}

/// Command batch builder for minimizing FFI overhead
class CommandBatch {
  final BytesBuilder _builder = BytesBuilder();
  int _commandCount = 0;

  void setParameter(int paramId, double value) {
    _builder.addByte(CommandType.setParameter.value);
    _builder.add(_encodeUint32(paramId));
    _builder.add(_encodeFloat64(value));
    _commandCount++;
  }

  void setGeometry(int geometryIndex) {
    _builder.addByte(CommandType.setGeometry.value);
    _builder.add(_encodeUint32(geometryIndex));
    _commandCount++;
  }

  void rotate(RotationPlane plane, double angle) {
    _builder.addByte(CommandType.rotate.value);
    _builder.addByte(plane.value);
    _builder.add(_encodeFloat64(angle));
    _commandCount++;
  }

  void resetRotation() {
    _builder.addByte(CommandType.resetRotation.value);
    _commandCount++;
  }

  void render() {
    _builder.addByte(CommandType.render.value);
    _commandCount++;
  }

  int get commandCount => _commandCount;

  Uint8List execute() {
    final commands = _builder.toBytes();
    final resultsPtr = calloc<Uint8>(commands.length * 2);
    final commandsPtr = calloc<Uint8>(commands.length);

    for (int i = 0; i < commands.length; i++) {
      commandsPtr[i] = commands[i];
    }

    final resultSize = _processCommandBatch(commandsPtr, commands.length, resultsPtr);

    final results = Uint8List(resultSize);
    for (int i = 0; i < resultSize; i++) {
      results[i] = resultsPtr[i];
    }

    calloc.free(commandsPtr);
    calloc.free(resultsPtr);

    return results;
  }

  void clear() {
    _builder.clear();
    _commandCount = 0;
  }

  Uint8List _encodeUint32(int value) {
    final data = ByteData(4);
    data.setUint32(0, value, Endian.little);
    return data.buffer.asUint8List();
  }

  Uint8List _encodeFloat64(double value) {
    final data = ByteData(8);
    data.setFloat64(0, value, Endian.little);
    return data.buffer.asUint8List();
  }
}

/// Memory allocator for native memory
final Allocator calloc = pkg_ffi.calloc;
